[metadata]
name = uniparser-morph
version = 2.7.6
author = Timofey Arkhangelskiy
author_email = timarkh@gmail.com
description = Rule-based, linguist-friendly (and rather slow) morphological analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timarkh/uniparser-morph
project_urls =
    Documentation = https://uniparser-morph.readthedocs.io/en/latest/
    Source Code = https://github.com/timarkh/uniparser-morph
    Bug Tracker = https://github.com/timarkh/uniparser-morph/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >=3.5

